Fix potfolio slider alignment

--- a/resources/assets/css/optional.css
+++ b/resources/assets/css/optional.css
@@ -375,7 +375,7 @@
 	height: 100%;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-around;
+	justify-content: flex-start;
 	align-content: space-between; 
 	position: relative;
 }
